--- a/package.json
+++ b/package.json
@@ -11,10 +11,15 @@
   "dependencies": {
     "@react-router/node": "7.12.0",
     "@react-router/serve": "7.12.0",
+    "appwrite": "^21.5.0",
+    "clsx": "^2.1.1",
     "isbot": "^5.1.31",
+    "lucide-react": "^0.562.0",
+    "node-appwrite": "^21.1.0",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
-    "react-router": "7.12.0"
+    "react-router": "7.12.0",
+    "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
     "@react-router/dev": "7.12.0",
