feat: implement recursive todo list with data persistence

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
 APPWRITE_ENDPOINT=https://cloud.appwrite.io/v1
 APPWRITE_PROJECT="ProjectId"
 APPWRITE_API_KEY="Api_Key_with_permissions"
+APPWRITE_DATABASE_ID="your-existing-database-id"  # Optional: use an existing database if you hit the limit
